# rlbench_utils

./: README.md  pyproject.toml
.github/workflows/: run-tests.yaml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: explore_dataset.ipynb  explore_dset2.ipynb
scripts/: example.py
src/rpad/rlbench_utils/: keyframing.py  keyframing_pregrasp.py  placement_dataset.py  task_info.py
tests/: scene_test.py
