[project]
name = "rpad-rlbench-utils"
version = "0.1.0"
description = "A Python Package Template"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
authors = [{ email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" }]
dependencies = [
  "torch",
  "torchvision",

  # Pyrep requirements. https://github.com/stepjam/PyRep/blob/master/requirements.txt
  "pyrep", # Should already be installed.
  "numpy",

  # RLBench requirements.
  "rlbench @ git+https://github.com/stepjam/RLBench.git@55e723d9400b54d37e6077ea2753e64874bc4639#egg=rlbench",
  "Pillow",
  "pyquaternion",
  "html-testRunner",
  "setuptools",
  "natsort",
]

[build-system]
requires = ["cffi==1.14.2", "setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.1.1",
  "black == 23.3.0",
  "isort == 5.12.0",
  "mypy == 1.3.0",
  "pylint == 2.17.4",
  "pytest == 7.3.2",
  "pre-commit == 3.3.3",
]
notebooks = ["jupyter"]
build_docs = ["mkdocs-material", "mkdocstrings[python]"]

# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rpad = ["py.typed"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# # Uncomment this when you have imports for mypy to ignore.
# [[tool.mypy.overrides]]
# module = [
# ]
# ignore_missing_imports = true
